--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,11 @@ html, body{
     margin: 0;
     height: 100%;
     width: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+div {
+    box-sizing: border-box;
 }
 
 .cadastro {
@@ -11,7 +16,7 @@ html, body{
     display: flex; 
     flex-direction: column;
     gap: 18px; 
-    margin-top: 10%; 
+    padding: 32px;
     align-items: center;
 }
 
