--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,10 @@ div {
     padding: 12px;
 }
 
+.mt-32 {
+    margin-top: 32px;
+}
+
 .card {
     background-color: cadetblue;
     padding: 24px;
