--- a/styles.css
+++ b/styles.css
@@ -82,3 +82,17 @@ a {
 .estoque li:hover {
     background-color: rgb(137, 138, 146);
 }
+
+.itens {
+    font-size: 120%;
+    
+}
+
+input[type=number]::-webkit-inner-spin-button { 
+    -webkit-appearance: none;
+}
+
+.precos {
+    display: inline-block;
+    margin: 0 5% 0 5%;
+}
