--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,33 @@ html, body{
     font-family: Arial, Helvetica, sans-serif;
 }
 
-input[type="radio"] {
-    margin-right: 8px;
-    transform: scale(1.5); /* Increase the radio button size */
+form {
+    display: flex;
   }
+  
+  label {
+    display: flex;
+    align-items: center;
+    padding: 20px 50px;
+    cursor: pointer;
+  }
+  
+  input[type="radio"] {
+    margin-right: 5px;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    border: 2px solid rgb(131, 204, 131);
+    border-radius: 50%;
+    outline: none;
+    transition: border-color 0.3s;
+  }
+  
+  input[type="radio"]:checked {
+    background-color: rgb(131, 204, 131);
+    border-color: rgb(131, 204, 131); 
+  }
+  
 
 div {
     box-sizing: border-box;
@@ -62,13 +85,12 @@ nav a.active ~ div {
     margin-top: 32px;
 }
 
-.card {
-    background-color: cadetblue;
-    padding: 24px;
-}
-
 .input-prop {
-    padding: 8px;
+    margin: 8px;
+    padding: 10px;
+    font-size: 16px;
+    border: 2px solid rgb(131, 204, 131);
+    border-radius: 5px;
 }
 
 .w-100 {
@@ -78,6 +100,16 @@ nav a.active ~ div {
 a {
     color: white;
     text-decoration: none;
+}
+
+.titulo {
+  font-family: 'Arial', sans-serif;
+  font-size: 36px;
+  font-weight: 900;
+  text-transform: uppercase;
+  color: rgb(131, 204, 131);
+  text-shadow: 4px 6px 2px rgba(0, 0, 0, 0.5);
+
 }
 
 .estoque li {
@@ -111,9 +143,35 @@ td, th{
 }
 
 .itens {
-    font-size: 120%;
-    
-}
+    margin: 8px;
+    padding: 10px;
+    font-size: 16px;
+    border: 2px solid rgb(131, 204, 131);
+    border-radius: 5px;
+  }
+
+  #quantidade {
+    margin: 8px;
+    padding: 10px;
+    font-size: 16px;
+    border: 2px solid rgb(131, 204, 131);
+    border-radius: 5px;
+  }
+  
+  #confirmButton {
+    margin: 8px;
+    padding: 10px;
+    background-color: #83cc83; 
+    color: #fff;
+    padding: 15px 25px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  #confirmButton:hover {
+    background-color: #4d8d4d;
+  }
 
 input[type=number]::-webkit-inner-spin-button { 
     -webkit-appearance: none;
@@ -123,3 +181,29 @@ input[type=number]::-webkit-inner-spin-button {
     display: inline-block;
     margin: 0 5% 0 5%;
 }
+
+#estoque th {
+  font-family: 'Arial', sans-serif;
+  font-size: 20px;
+  font-weight: 900;
+  text-transform: uppercase;
+  color: rgb(131, 204, 131);
+  text-shadow: 1px 2px 1px rgba(0, 0, 0, 0.5);
+}
+
+
+#estoque tbody {
+  font-family: 'Arial', sans-serif;
+  font-size: 15px;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: rgb(44, 75, 44);
+}
+
+#corpoTabela tr:nth-child(even) {
+    background-color: #d8d8d8; /* Cor de fundo para linhas pares */
+  }
+  
+  #corpoTabela tr:nth-child(odd) {
+    background-color: #ffffff; /* Cor de fundo para linhas ímpares */
+  }
